--- a/pini.html
+++ b/pini.html
@@ -34,7 +34,7 @@ referência: <a href="https://tinyurl.com/2s4bnnu3">https://tinyurl.com/2s4bnnu3
 5. Jogos dos Povos Indígenas
 referência: <a href="http://www.educacaofisica.seed.pr.gov.br/modules/conteudo/conteudo.php?conteudo=218">http://www.educacaofisica.seed.pr.gov.br/modules/conteudo/conteudo.php?conteudo=218</a>
 
-O conteúdo do projeto pode ser acessado no endereço da internet: <a href="https://github.com/">https://github.com/...</a>
+O conteúdo do projeto pode ser acessado no endereço da internet: <a href="https://github.com/aulasdeprogramacao/olimpiadas" target=_blank>https://github.com/...</a>
 </pre>
 </td>
 </tr>
